[package]
name = "tokio-socks5"
version = "0.1.1"
authors = ["cssivision <cssivision@gmail.com>"]
license = "MIT"
repository = "https://github.com/cssivision/tokio-socks5-rs"
homepage = "https://github.com/cssivision/tokio-socks5-rs"
description = "async socks5 protocol"
readme = "README.md"

[dependencies]
log = "0.3"
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
env_logger = "0.3"
